# pyepal

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitchangelog.rc  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support.md
.github/workflows/: codeql.yml  docs.yml  pre_commit.yml  python_package.yml  release_me.yml
PyPAL/: __init__.py  _version.py
PyPAL/models/: coregionalized.py  gpr.py
PyPAL/pal/: core.py  pal.py  pal_base.py  pal_coregionalized.py  pal_gpy.py  pal_sklearn.py  schedules.py  utils.py  validate_inputs.py
binder/: postBuild
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
dev/: play_w_gpflow.ipynb
docs/: api.rst  background.rst  conf.py  developer_notes.rst  getting_started.rst  index.html  index.rst  requirements.txt  tutorials.rst
docs/_build/doctrees/: api.doctree  background.doctree  developer_notes.doctree  environment.pickle  getting_started.doctree  index.doctree  (+2 more)
docs/_static/: binh_korn_sklearn.ipynb  hyperparameter_illustration_delta_001.ai  hyperparameter_illustration_delta_01.ai  hyperparams.ipynb
examples/: active_learning_example.ipynb  binh_korn_one_step.ipynb  learning_curve.ipynb  quantile_regression.ipynb  stream-mode_active_learning_example.ipynb  test_pal.ipynb
pyepal/: __init__.py  _version.py
pyepal/models/: coregionalized.py  gbdt.py  gpr.py  nt.py  nt_stax.py
pyepal/pal/: _hypervolume.py  core.py  pal_base.py  pal_coregionalized.py  pal_finite_ensemble.py  pal_gbdt.py  pal_gpflow.py  pal_gpflowgpr.py  pal_gpy.py  pal_neural_tangent.py  pal_sklearn.py  schedules.py  utils.py  validate_inputs.py
pyepal/plotting/: __init__.py
pypal/: __init__.py
pypal/models/: __init__.py  gbdt.py  gpr.py
pypal/pal/: _hypervolume.py  core.py  pal_base.py  pal_coregionalized.py  pal_gbdt.py  pal_gpy.py  pal_sklearn.py  schedules.py  utils.py  validate_inputs.py
pypal/plotting/: __init__.py
src/pyepal/: __init__.py  version.py
test/: conftest.py  test_pal_core.py
tests/: conftest.py  test_coregionalized.py  test_metrics.py  test_models_botorch.py  test_models_gbdt.py  test_models_gpy.py  test_models_nt.py  test_models_nt_stax.py  test_pal_base.py  test_pal_botorch.py  test_pal_catboost.py  test_pal_core.py  test_pal_coregionalized.py  test_pal_ensemble.py  test_pal_finite_ensemble.py  test_pal_gbdt.py  test_pal_gpflowgpr.py  test_pal_gpy.py  test_pal_neural_tangent.py  test_pal_schedules.py  test_pal_sklearn.py  test_pal_utils.py  test_plotting.py  test_validate_inputs.py
(+82 files in other folders)
