[metadata]
name = pyepal
version = 0.8.0-dev0
description = PyePAL implements the epsilon-PAL active learning algorithm
author = Kevin Maik Jablonka, Brian Yoo
author_email = mail@kjablonka.com, brian.yoo@basf.com
maintainer_email = mail@kjablonka.com
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/pyepal
download_url =https://github.com/kjappelbaum/pyepal/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/pyepal/issues
    Source Code = https://github.com/kjappelbaum/pyepal/


license = Apache
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
keywords =
    active-learning
    machine-learning


[options]
install_requires =
    numpy < 1.24
    numba < 0.56
    scikit-learn < 2.0


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8, < 3.9

# Where is my code
packages = find:
package_dir =
    = src



[options.extras_require]
gpy =
    GPy < 1.10
    matplotlib
catboost =
    catboost
GBDT =
    lightgbm < 4
neural_tangents =
    jaxlib <= 0.1.65
    jax < 0.3.15
    neural_tangents < 0.6.0
gpflow =
    tensorflow >= 2.5, < 2.9
    tensorflow-probability >= 0.12, < 0.13
    gpflow >= 2.2.0, < 2.6.0
botorch =
    torch
    botorch
all =
    GPy < 1.10
    matplotlib
    lightgbm < 4
    jaxlib <= 0.1.65
    jax < 0.3.15
    neural_tangents < 0.6.0
    tensorflow >= 2.5, < 2.9
    tensorflow-probability >= 0.12, < 0.13
    gpflow >= 2.2.0, < 2.6.0
    torch
    botorch
    catboost
docs =
    sphinx
    sphinx-book-theme
    sphinx-autodoc-typehints
    sphinx-copybutton
testing =
    pytest
    pytest-cov
pre-commit =
    pre-commit
    pylint
    isort

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pyepal
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/pyepal
    .tox/*/lib/python*/site-packages/pyepal

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
